crates/lex/tests/ui/not_supported_unit_structs.stderr
error: unit structs are not supported as they contain no span
 --> tests/ui/not_supported_unit_structs.rs
  |
  | struct Foo;
  | ^^^^^^
